--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^2.2.33",
-    "requirelib": "~0.0.2",
     "bufferjoiner": "^0.1.3",
+    "handlebars": "^4.0.10",
+    "mime": "^2.0.3",
+    "mongodb": "^2.2.33",
+    "mongoose": "4.4.20",
     "oauth": "^0.9.15",
     "oauth-signature": "^1.3.1",
-    "request": "^2.81.0",    
-    "handlebars": "^4.0.10",
-    "mongoose": "4.4.20"
+    "request": "^2.81.0",
+    "requirelib": "~0.0.2"
   }
 }
