--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "bufferjoiner": "^0.1.3",
-    "handlebars": "^4.0.10",
-    "mime": "^2.0.3",
+    "handlebars": "^1.2.1",
+    "mime": "^1.2.11",
     "mongodb": "^2.2.33",
-    "mongoose": "4.4.20",
-    "oauth": "^0.9.15",
+    "mongoose": "3.8.40",
+    "oauth": "~0.9.11",
+    "request": "2.34.0",
     "oauth-signature": "^1.3.1",
-    "request": "^2.81.0",
     "requirelib": "~0.0.2"
   }
 }
